--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,12 @@
 {
-    "require-dev": {
-        "phpunit/phpunit": "^11"
-    },
     "require": {
-        "slim/slim": "4.*",
-        "slim/psr7": "^1.7"
+        "slim/slim": "^4.8",
+        "psr/http-message": "^1.0",
+        "slim/psr7": "^1.3"
+    },
+    "autoload": {
+        "psr-4": {
+            "Yatzy\\": "src/"
+        }
     }
 }
